first commit project in new CRA

--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,111 @@
-.App {
-  text-align: center;
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300&display=swap');
+
+:root{
+  --primary-white: #fff;
+  --primary-dark: rgba(255,255,255,0);
+  --primary-blue: #7488e4;
+  --primary-orange: rgb(233, 222, 77);
+  --primary-youngblue: rgb(65, 101, 218);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body{
+  font-family: "Roboto Condesed" sans-serif;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/*****************NAVBAR******************/
+.logo{
+  width: 10.25rem;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav a.nav-link{
+  font-weight: 500;
+  letter-spacing: 0.6;
+  cursor: pointer;
+  font-size: 0.8rem;
+}
+
+nav ul li{
+  text-transform: uppercase;
+}
+
+a.navbar-brand{
+  margin-right: 40%;
+  margin-top: 7px;
+  margin-bottom: 7px;
+}
+
+.navbar-nav > li > a {
+  color: var(--primary-white) !important;
+  margin-left: 30px;
+  border-bottom: 3px solid var(--primary-dark);
+}
+
+button.navbar-toggler:focus, button.navbar-toggler:hover{
+  border: 2px solid var(--primary-blue);
+}
+
+.navbar-nav > li > a.active, .navbar-nav > li > a.active:focus{
+  border-bottom: 3px solid var(--primary-blue);
+}
+
+.navbar-nav > li > a:hover{
+  border-bottom: 3px solid var(--primary-blue);
+}
+
+/*****************HEADER******************/
+.header-wraper {
+  position: relative;
+  background: url(header.jpg) no-repeat;
+  background-size: cover;
+  background-position: center;
+  height: 90vh;
+}
+
+.main-info {
+  position: absolute;
+  right: 0;
+  left: 0;
+  top: 0;
+  bottom: 0;
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  text-align: center;
+  font-family: "Roboto Condesed", sans-serif;
 }
 
-.App-link {
-  color: #61dafb;
+.main-info h1 {
+  color: var(--primary-orange);
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 2.10rem;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+/*****************TYPEDTEXT******************/
+.typed-text1{
+  font-size: 1.50rem;
+  color: var(--primary-white);
+  text-transform: uppercase;
+}
+
+.typed-text2{
+  font-size: 2rem;
+  color: var(--primary-white);
+}
+
+/*****************TYPEDBTN ******************/
+.btn-main{
+  border: 2px solid var(--primary-blue);
+  text-transform: uppercase;
+  border-radius: 0;
+  padding: 0.75rem;
+  color: var(--primary-white);
+  margin: 2rem;
+  text-decoration: none;
+}
+
+.btn-main:hover{
+  background-color: var(--primary-youngblue);
+  color: var(--primary-white);
 }
